--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <!-- Logo -->
           <div class="relative inline-block flex items-center">
             <img
-              src="images/logo.png"
+              src="Images/logo.png"
               alt="Prospecta Build X Logo"
               class="h-32 w-auto object-contain -my-8"
             />
