--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           >
             <div class="h-96 overflow-hidden">
               <img
-                src="Images/proj1.jpeg"
+                src="Images/completed1.jpg"
                 alt="Elite Heights"
                 class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
               />
@@ -514,7 +514,7 @@
           >
             <div class="h-96 overflow-hidden">
               <img
-                src="Images/proj2.jpeg"
+                src="Images/completed2.jpg"
                 alt="Royal Plaza"
                 class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
               />
@@ -550,7 +550,7 @@
           >
             <div class="h-96 overflow-hidden">
               <img
-                src="Images/proj3.jpeg"
+                src="Images/completed3.jpg"
                 alt="Future City"
                 class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
               />
@@ -583,11 +583,11 @@
         </div>
         <div class="text-center mt-12">
           <a href="#projects">
-            <button
+            <!-- <button
               class="px-8 py-3 bg-white text-navy border-2 border-navy rounded-full font-medium hover:bg-navy hover:text-white transition-all duration-300 shadow-md hover:shadow-lg"
             >
               View All Projects
-            </button>
+            </button> -->
           </a>
         </div>
       </div>
