images update and slider time

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <span
             ><i class="fas fa-envelope mr-2"></i>info@prospectabuildx.com</span
           >
-          <span><i class="fas fa-phone mr-2"></i>+91 98765 43210</span>
+          <span><i class="fas fa-phone mr-2"></i>+91 95495 43838</span>
         </div>
         <div class="flex space-x-3">
           <a
@@ -229,7 +229,7 @@
         <div
           class="slide absolute inset-0 w-full h-screen opacity-0"
           style="
-            background-image: url('./Images/2banner.png');
+            background-image: url('./Images/banner2\ \(1\).jpeg');
             background-size: cover;
             background-position: center;
           "
@@ -262,7 +262,7 @@
         <div
           class="slide absolute inset-0 w-full h-screen opacity-0"
           style="
-            background-image: url('Images/3.jpeg');
+            background-image: url('Images/banner3.jpeg');
             background-size: cover;
             background-position: center;
           "
@@ -1005,7 +1005,7 @@
               </div>
               <div class="flex items-center">
                 <i class="fas fa-phone mr-3 text-purple"></i>
-                <span class="text-navy">+91 7774946495 </span>
+                <span class="text-navy">+91 95495 43838 </span>
               </div>
               <div class="flex items-center">
                 <i class="fas fa-envelope mr-3 text-purple"></i>
@@ -1187,7 +1187,7 @@
               </div>
               <div class="flex items-center">
                 <i class="fas fa-phone mr-3"></i>
-                <span class="text-white/80">+91 7774946495</span>
+                <span class="text-white/80">+91 95495 43838</span>
               </div>
               <div class="flex items-center">
                 <i class="fas fa-envelope mr-3"></i>
