remove project names

--- a/index.html
+++ b/index.html
@@ -500,24 +500,24 @@
               <div
                 class="translate-y-4 group-hover:translate-y-0 transition-transform duration-300"
               >
-                <h3 class="text-xl font-extrabold text-white mb-2">
+                <!-- <h3 class="text-xl font-extrabold text-white mb-2">
                   Elite Heights
-                </h3>
-                <p class="text-gray-200 mb-4">
+                </h3> -->
+                <!-- <p class="text-gray-200 mb-4">
                   Luxury residential complex with modern amenities
                 </p>
                 <button
                   class="bg-purple hover:bg-purple-700 text-white px-4 py-2 rounded-lg transition duration-300"
                 >
                   View Project <span class="ml-2">→</span>
-                </button>
+                </button> -->
               </div>
             </div>
-            <div class="absolute top-4 left-4">
+            <!-- <div class="absolute top-4 left-4">
               <h3 class="text-lg font-semibold text-gray-600 drop-shadow-md">
                 Elite Heights
               </h3>
-            </div>
+            </div> -->
           </div>
           <div
             class="project-item group relative overflow-hidden rounded-xl shadow-xl transition-all duration-500 hover:shadow-2xl"
@@ -536,24 +536,24 @@
               <div
                 class="translate-y-4 group-hover:translate-y-0 transition-transform duration-300"
               >
-                <h3 class="text-xl font-extrabold text-white mb-2">
+                <!-- <h3 class="text-xl font-extrabold text-white mb-2">
                   Royal Plaza
-                </h3>
-                <p class="text-gray-200 mb-4">
+                </h3> -->
+                <!-- <p class="text-gray-200 mb-4">
                   Premium commercial space in prime location
                 </p>
                 <button
                   class="bg-purple hover:bg-purple-700 text-white px-4 py-2 rounded-lg transition duration-300"
                 >
                   View Project <span class="ml-2">→</span>
-                </button>
+                </button> -->
               </div>
             </div>
-            <div class="absolute top-4 left-4">
+            <!-- <div class="absolute top-4 left-4">
               <h3 class="text-lg font-semibold text-gray-600 drop-shadow-md">
                 Royal Plaza
               </h3>
-            </div>
+            </div> -->
           </div>
           <div
             class="project-item group relative overflow-hidden rounded-xl shadow-xl transition-all duration-500 hover:shadow-2xl"
@@ -572,24 +572,24 @@
               <div
                 class="translate-y-4 group-hover:translate-y-0 transition-transform duration-300"
               >
-                <h3 class="text-2xl font-extrabold text-white mb-2">
+                <!-- <h3 class="text-2xl font-extrabold text-white mb-2">
                   Future City
-                </h3>
-                <p class="text-gray-200 mb-4">
+                </h3> -->
+                <!-- <p class="text-gray-200 mb-4">
                   Smart city project with advanced technology
-                </p>
-                <button
+                </p> -->
+                <!-- <button
                   class="bg-purple hover:bg-purple-700 text-white px-4 py-2 rounded-lg transition duration-300"
                 >
                   View Project <span class="ml-2">→</span>
-                </button>
+                </button> -->
               </div>
             </div>
-            <div class="absolute top-4 left-4">
+            <!-- <div class="absolute top-4 left-4">
               <h3 class="text-lg font-semibold text-gray-600 drop-shadow-md">
                 Future City
               </h3>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="text-center mt-12">
